--- a/talks.html
+++ b/talks.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 
-{% for item in site.talks %}
-  <p><a href="{{ item.url }}">{{ item.date | date: "%m/%d/%Y"}} {{ item.event }}: {{item.title}}</a></p>
+{% assign sorted = site.talks | reverse %}
+{% for item in sorted %}
+  <p><a href="{{ item.url }}">{{ item.date | date: "%Y/%m/%d"}} {{ item.event }}: {{item.title}}</a></p>
 {% endfor %}
