--- a/career.html
+++ b/career.html
@@ -6,6 +6,7 @@ Over the last (roughly) two decades I have spent a significant amount of energy 
 
 The purpose of these pages are to share that advice. 
 
-{% for item in site.career %}
+{% assign sorted = site.career | reverse %}
+{% for item in sorted %}
   <p><a href="{{ item.url }}">{{item.date | date: "%m/%d/%Y"}}: {{ item.title }}</a></p>
 {% endfor %}
