--- a/research.html
+++ b/research.html
@@ -4,8 +4,9 @@ layout: default
 
 Here is a list of research papers I've written. 
 
-{% for item in site.research %}
-  <p><h3><a href="{{ item.url }}">{{ item.title }}</a></h3></p>
+{% assign sorted = site.research | reverse %}
+{% for item in sorted %}
+  <p><h3><a href="{{ item.url }}">{{item.year}}: {{ item.title }}</a></h3></p>
 {% endfor %}
 
 
