--- a/research.html
+++ b/research.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-Here is a list of research papers I've written. 
+In this section you can information about the papers I've published, their abstracts and links. 
 
 {% assign sorted = site.research | reverse %}
 {% for item in sorted %}
