--- a/index.html
+++ b/index.html
@@ -2,17 +2,7 @@
 layout: default
 ---
 
-<div class="about">
-I'm a professor of Data Science at the [University of San Francisco](https://www.usfca.edu/faculty/nicholas-ross "My USF Homepage"). Before USF, I spent a number of years in the video game industry, primarily at two companies: TinyCo, which was purchased by [JamCity in 2016](https://www.jamcity.com/why-were-buying-tinyco/) and [Sega](https://www.sega.com/), though I also consulted for a number of different start-ups. After completing my undergraudate degree, I worked for a number of years at [Bates White](https://www.bateswhite.com/), an economic consulting firm located in DC and San Diego. 
-
-Currently, my primary responsibility is overseeing the [Practicum Program](https://www.usfca.edu/arts-sciences/graduate-programs/data-science/practicums) at USF, which is a required, part-time 9-month internship for students in the [Masters of Data Science Program](https://www.usfca.edu/arts-sciences/graduate-programs/data-science).
+This is the homepage of Nick Ross, Professor of Data Science at USF. You can find information <a href='./about'>about me,</a> <a href="./projects">some projects</a>, <a href="./reserach">my research</a> and <a href="./career">Career Advice</a> can be found here.
 
 
-### Education 
 
-I'm a proud product of the UC system: Undergraduate Math at [UC Berkeley](https://math.berkeley.edu/) (2002), Masters in Economics from [UC Davis](https://economics.ucdavis.edu/) (2007) and a PhD from [UCLA's Anderson School of Management](https://www.anderson.ucla.edu/) (2012).
-
-### Contact me
-
-[ncross@usfca.edu](mailto:ncross@usfca.edu)
-</div>
