--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-This is the homepage of Nick Ross, Professor of Data Science at USF. You can find information <a href='./about'>about me,</a> <a href="./projects">some projects</a>, <a href="./reserach">my research</a> and <a href="./career">Career Advice</a> can be found here.
+This is the homepage of Nick Ross, Professor of Data Science at USF. You can find information <a href='./about'>about me,</a> <a href="./projects">some projects</a>, <a href="./research">my research</a> and <a href="./career">Career Advice</a> can be found here.
 
 
 
